assets/notes.css
.main {
    display: flex;
    flex-direction: row;
}

#notes-list-filter-container {
    display: flex;
    justify-content: center;
    justify-items: center;
    width: 100%;
    padding: 0.5em;
}

#notes-list-filter {
    width: 100%;
}

#notes-list-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    background-color: aqua;
    max-width: 50em;
}

#notes-list {
    display: flex;
    flex-direction: column;
    width: 100%;
    background-color: aqua;
    max-width: 50em;
}

#create-note-bar {
    display: flex;
    flex-direction: row;
}

.buffer {
    display: flex;
    flex-direction: column;
    flex-shrink: 2;
    width: 100%;
}

.note {
    display: flex;
    flex-direction: column;
    padding: 0.5em 0.5em 0.5em 0.5em;
    margin: 0.2em; /* NB: This makes 0.4em of margin between notes, but 0.2em at the top & bottom of the list. I am fine with this. */
    /*background-color: blueviolet;*/
    background-color: darkgray;
    font-family: monospace;
    border-radius: 0.5em;
    color: black;
    cursor: pointer;
}

.note:link { text-decoration: none; }
.note:visited { text-decoration: none; }
.note:hover { text-decoration: none; }
.note:active { text-decoration: none; }
.note:hover { background-color: lightgray; }
.note:focus { background-color: lightgray; }

.note-title {
    font-weight: bold;
}

.note-preview {
    margin-top: 1em;
    font-size: x-small;
}

#note-title-bar {
    display: flex;
    flex-direction: row;
}

#note-title {
    border: 0.1px solid #ccc;
    border-radius: 0.5em;
    padding: 0.3em;
    font-size: x-large;
}

.save-button {
    padding: 0.3em;
    font-size: large;
    padding-top: 0.6em;
}

#note-title.note-title-edited {
    background-color: yellow;
}

/* #note-title:hover {
    background-color: aqua;
} */

.editor-console {
    width: 100%;
}

.editor-container {
    width: 100%;
    background-color: aqua;
    min-height: 50em;
    border: 0.3em solid grey;
}

#editor {
    margin: 0.5em;
    width: 100%;
    height: 100%;
    font-family: monospace;
}

#login-container {
    width: 100%;
    background-color: aqua;
    text-align: center;
}

